--- a/munging_data.ipynb
+++ b/munging_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -45,7 +45,7 @@
        "(55379, 17)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,31 +56,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "splitted_data = pd.DataFrame(columns=['trip_id','direction','time','station_id','lat','lon'],dtype=\"str\")"
+    "splitted_data = pd.DataFrame(columns=['trip_id','direction','time','station_id','lat','lon','passholder_type'],dtype=\"str\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "append_data = trip_data.loc[0:,[\"trip_id\",\"start_time\",\"start_station_id\",\"start_lat\",\"start_lon\"]]\n",
-    "append_data.columns = ['trip_id','time','station_id','lat','lon']\n",
+    "append_data = trip_data.loc[0:,[\"trip_id\",\"start_time\",\"start_station_id\",\"start_lat\",\"start_lon\",\"passholder_type\"]]\n",
+    "append_data.columns = ['trip_id','time','station_id','lat','lon','passholder_type']\n",
     "append_data['direction'] = \"start\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -91,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "append_data = trip_data.loc[0:,[\"trip_id\",\"end_time\",\"end_station_id\",\"end_lat\",\"end_lon\"]]\n",
-    "append_data.columns = ['trip_id','time','station_id','lat','lon']\n",
+    "append_data = trip_data.loc[0:,[\"trip_id\",\"end_time\",\"end_station_id\",\"end_lat\",\"end_lon\",\"passholder_type\"]]\n",
+    "append_data.columns = ['trip_id','time','station_id','lat','lon','passholder_type']\n",
     "append_data['direction'] = \"end\"\n",
     "\n",
     "splitted_data = splitted_data.append(append_data,ignore_index=True)"
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -114,10 +114,10 @@
     {
      "data": {
       "text/plain": [
-       "(110758, 6)"
+       "(110758, 7)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -224,7 +224,7 @@
        "1              0              0  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -251,6 +251,7 @@
        "      <th>direction</th>\n",
        "      <th>lat</th>\n",
        "      <th>lon</th>\n",
+       "      <th>passholder_type</th>\n",
        "      <th>station_id</th>\n",
        "      <th>time</th>\n",
        "      <th>trip_id</th>\n",
@@ -262,6 +263,7 @@
        "      <td>start</td>\n",
        "      <td>34.0566101</td>\n",
        "      <td>-118.23721</td>\n",
+       "      <td>Monthly Pass</td>\n",
        "      <td>3014</td>\n",
        "      <td>7/7/2016 4:17</td>\n",
        "      <td>1912818</td>\n",
@@ -271,6 +273,7 @@
        "      <td>start</td>\n",
        "      <td>34.0566101</td>\n",
        "      <td>-118.23721</td>\n",
+       "      <td>Monthly Pass</td>\n",
        "      <td>3014</td>\n",
        "      <td>7/7/2016 6:00</td>\n",
        "      <td>1919661</td>\n",
@@ -280,6 +283,7 @@
        "      <td>end</td>\n",
        "      <td>34.0566101</td>\n",
        "      <td>-118.23721</td>\n",
+       "      <td>Monthly Pass</td>\n",
        "      <td>3014</td>\n",
        "      <td>7/7/2016 4:20</td>\n",
        "      <td>1912818</td>\n",
@@ -289,6 +293,7 @@
        "      <td>end</td>\n",
        "      <td>34.0566101</td>\n",
        "      <td>-118.23721</td>\n",
+       "      <td>Monthly Pass</td>\n",
        "      <td>3014</td>\n",
        "      <td>7/7/2016 6:33</td>\n",
        "      <td>1919661</td>\n",
@@ -298,14 +303,20 @@
        "</div>"
       ],
       "text/plain": [
-       "      direction         lat         lon station_id           time  trip_id\n",
-       "0         start  34.0566101  -118.23721       3014  7/7/2016 4:17  1912818\n",
-       "1         start  34.0566101  -118.23721       3014  7/7/2016 6:00  1919661\n",
-       "55379       end  34.0566101  -118.23721       3014  7/7/2016 4:20  1912818\n",
-       "55380       end  34.0566101  -118.23721       3014  7/7/2016 6:33  1919661"
+       "      direction         lat         lon passholder_type station_id  \\\n",
+       "0         start  34.0566101  -118.23721    Monthly Pass       3014   \n",
+       "1         start  34.0566101  -118.23721    Monthly Pass       3014   \n",
+       "55379       end  34.0566101  -118.23721    Monthly Pass       3014   \n",
+       "55380       end  34.0566101  -118.23721    Monthly Pass       3014   \n",
+       "\n",
+       "                time  trip_id  \n",
+       "0      7/7/2016 4:17  1912818  \n",
+       "1      7/7/2016 6:00  1919661  \n",
+       "55379  7/7/2016 4:20  1912818  \n",
+       "55380  7/7/2016 6:33  1919661  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -387,7 +398,7 @@
        "55378           1009            290  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -414,6 +425,7 @@
        "      <th>direction</th>\n",
        "      <th>lat</th>\n",
        "      <th>lon</th>\n",
+       "      <th>passholder_type</th>\n",
        "      <th>station_id</th>\n",
        "      <th>time</th>\n",
        "      <th>trip_id</th>\n",
@@ -425,6 +437,7 @@
        "      <td>start</td>\n",
        "      <td>34.0484009</td>\n",
        "      <td>-118.26095</td>\n",
+       "      <td>Walk-up</td>\n",
        "      <td>3035</td>\n",
        "      <td>9/30/2016 23:54</td>\n",
        "      <td>8369650</td>\n",
@@ -434,6 +447,7 @@
        "      <td>end</td>\n",
        "      <td>34.0447006</td>\n",
        "      <td>-118.25244</td>\n",
+       "      <td>Walk-up</td>\n",
        "      <td>3031</td>\n",
        "      <td>10/1/2016 0:02</td>\n",
        "      <td>8369650</td>\n",
@@ -443,12 +457,16 @@
        "</div>"
       ],
       "text/plain": [
-       "       direction         lat         lon station_id             time  trip_id\n",
-       "55378      start  34.0484009  -118.26095       3035  9/30/2016 23:54  8369650\n",
-       "110757       end  34.0447006  -118.25244       3031   10/1/2016 0:02  8369650"
+       "       direction         lat         lon passholder_type station_id  \\\n",
+       "55378      start  34.0484009  -118.26095         Walk-up       3035   \n",
+       "110757       end  34.0447006  -118.25244         Walk-up       3031   \n",
+       "\n",
+       "                   time  trip_id  \n",
+       "55378   9/30/2016 23:54  8369650  \n",
+       "110757   10/1/2016 0:02  8369650  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
