Prepare data & file for Sankey Diagram

--- a/munging_data.ipynb
+++ b/munging_data.ipynb
@@ -485,6 +485,230 @@
    "source": [
     "splitted_data.to_csv(\"data/processed_split_start_end.csv\",index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we prepare data to be used in Sankey Diagram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "grouped = trip_data.groupby(['start_station_id','end_station_id'])\n",
+    "sankey_data = pd.DataFrame(grouped.size().rename('counts')).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#This is required to align the order of nodes appear in the Sankey Diagram\n",
+    "pre_rows = sankey_data.groupby('start_station_id').agg({'counts':'sum'}).reset_index().sort_values(by='counts',ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pre_rows['end_station_id'] = pre_rows['start_station_id']\n",
+    "pre_rows['counts'] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "sankey_data = pre_rows.append(sankey_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#add station name\n",
+    "station_names = pd.read_csv(\"data/metro_station_table.csv\",dtype=\"str\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "station_names = station_names.filter(['Station ID','Station Name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "station_names = station_names.drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "sankey_data = pd.merge(sankey_data, station_names, left_on = 'start_station_id', right_on = 'Station ID',how = 'left').filter(['start_station_id','Station Name','end_station_id','counts'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "sankey_data = pd.merge(sankey_data, station_names, left_on = 'end_station_id', right_on = 'Station ID',how = 'left').filter(['start_station_id','Station Name_x','end_station_id','Station Name_y','counts'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sankey_data.columns = ['start_station_id','start_station_name','end_station_id','end_station_name','counts']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>start_station_id</th>\n",
+       "      <th>start_station_name</th>\n",
+       "      <th>end_station_id</th>\n",
+       "      <th>end_station_name</th>\n",
+       "      <th>counts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3030</td>\n",
+       "      <td>Main &amp; 1st</td>\n",
+       "      <td>3030</td>\n",
+       "      <td>Main &amp; 1st</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3069</td>\n",
+       "      <td>Broadway &amp; 3rd</td>\n",
+       "      <td>3069</td>\n",
+       "      <td>Broadway &amp; 3rd</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3014</td>\n",
+       "      <td>Union Station West Portal</td>\n",
+       "      <td>3014</td>\n",
+       "      <td>Union Station West Portal</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3005</td>\n",
+       "      <td>Flower &amp; 7th</td>\n",
+       "      <td>3005</td>\n",
+       "      <td>Flower &amp; 7th</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3031</td>\n",
+       "      <td>7th &amp; Spring</td>\n",
+       "      <td>3031</td>\n",
+       "      <td>7th &amp; Spring</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  start_station_id         start_station_name end_station_id  \\\n",
+       "0             3030                 Main & 1st           3030   \n",
+       "1             3069             Broadway & 3rd           3069   \n",
+       "2             3014  Union Station West Portal           3014   \n",
+       "3             3005               Flower & 7th           3005   \n",
+       "4             3031               7th & Spring           3031   \n",
+       "\n",
+       "            end_station_name  counts  \n",
+       "0                 Main & 1st       0  \n",
+       "1             Broadway & 3rd       0  \n",
+       "2  Union Station West Portal       0  \n",
+       "3               Flower & 7th       0  \n",
+       "4               7th & Spring       0  "
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sankey_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sankey_data.to_csv(\"web/data/sankey_data.csv\",index=False)"
+   ]
   }
  ],
  "metadata": {
